[package]
name = "protocol-serde"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
protocol = { git = "https://github.com/noocene/protocol" }
serde = { version = "1.0.104", default-features = false }
futures = { version = "0.3.1", default-features = false }
genio = { version = "0.2.1", default-features = false }
core-futures-io = { git = "https://github.com/noocene/core-futures-io", default-features = false }

[features]
alloc = ["serde/alloc", "protocol/alloc", "core-futures-io/alloc"]
std = ["protocol/std", "genio/std", "core-futures-io/std"]
default = ["std", "alloc"]
